--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="img" href="/logo1.webp" />
+    <link rel="icon" type="img" href="/src/assets/logo1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jeremiah's Portfolio</title>
+    <title>Ashogbon Jeremiah</title>
   </head>
   <body>
     <div id="root"></div>
